tests/Errors/ErrorHandleStrategy/ErrorHandleGenericStrategy.js
export class ErrorHandleGenericStrategy
{
    handle(error, notification) {
        console.log(error);
    }
}